# okx

./: .env  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  okx_rsi.sqlite3  okx_scanner.sqlite3  okx_signal.sqlite3  pyproject.toml  start_scanners.sh
docs/: okx-15m-scanner-research.md
okx_scanner/: __init__.py  cached_market.py  cli.py  config.py  discord.py  indicators.py  models.py  okx_client.py  power_candle.py  power_service.py  power_simulation.py  service.py  sqlite_store.py
tests/: test_candles_and_vwma.py  test_cli.py  test_scanner.py  test_sqlite_cache.py  test_volume_alerts.py
